--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,6 +1,5 @@
 {% extends "site_base.html" %}
 
-{% load account_tags %}
 {% load i18n %}
 {% load bootstrap %}
 
@@ -10,7 +9,7 @@
     <div class="row">
         <div class="col-md-4">
             <form method="POST" action="{% url "account_login" %}" autocapitalize="off" {% if form.is_multipart %} enctype="multipart/form-data"{% endif %}>
-                <legend>{% trans "Log in to an existing account" %}</legend>
+                <legend>{% trans "Log in to an existing accounts" %}</legend>
                 {% csrf_token %}
                 {{ form|bootstrap }}
                 {% if redirect_field_value %}
@@ -22,13 +21,13 @@
             {% if ACCOUNT_OPEN_SIGNUP %}
                 <p class="login-signup">
                     <small>
-                        {% trans "Don't have an account?" %}  <strong><a href="{% urlnext 'account_signup' %}">{% trans "Sign up" %}</a></strong>
+                        {% trans "Don't have an accounts?" %}  <strong><a href="{% urlnext 'account_signup' %}">{% trans "Sign up" %}</a></strong>
                     </small>
                 </p>
             {% endif %}
         </div>
         <div class="col-md-4">
-            {% include "account/_login_sidebar.html" %}
+            {% include "accounts/_login_sidebar.html" %}
         </div>
     </div>
 {% endblock %}
