--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,5 +1,6 @@
 {% extends "site_base.html" %}
 
+{% load account_tags %}
 {% load i18n %}
 {% load bootstrap %}
 
@@ -19,12 +20,12 @@
             </form>
             <p class="login-signup">
                 <small>
-                    {% trans "Already have an accounts?" %}  <strong><a href="{% urlnext 'account_login' %}">{% trans "Log in" %}</a></strong>
+                    {% trans "Already have an account?" %}  <strong><a href="{% urlnext 'account_login' %}">{% trans "Log in" %}</a></strong>
                 </small>
             </p>
         </div>
         <div class="col-md-4">
-            {% include "accounts/_signup_sidebar.html" %}
+            {% include "account/_signup_sidebar.html" %}
         </div>
     </div>
 {% endblock %}
