almost getting add skills to work

--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -1,3 +1,7 @@
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
+
 {% block nav %}
 
     <ul>
@@ -10,5 +14,5 @@
 {% block body %}
 {% endblock %}
 {% block footer %}
-This is a fucking footer
+    This is a fucking footer
 {% endblock %}
