--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -9,20 +9,32 @@
 {% block body %}
     <div class="row">
         <div class="col-md-4">
-            <form method="POST" action="{% url "account_login" %}" autocapitalize="off" {% if form.is_multipart %} enctype="multipart/form-data"{% endif %}>
+            <form method="POST" action="{% url "account_login" %}" autocapitalize="off" {% if form.is_multipart %}
+                  enctype="multipart/form-data"{% endif %}>
                 <legend>{% trans "Log in to an existing account" %}</legend>
                 {% csrf_token %}
-                {{ form|bootstrap }}
+                <div class="fieldWrapper">
+                    {{ form.kepler_id.errors }}
+                    <label for="{{ form.kepler_id.id_for_label }}">kepler id</label>
+                    {{ form.kepler_id }}
+                </div>
+                <div class="fieldWrapper">
+                    {{ form.password.errors }}
+                    <label for="{{ form.password.id_for_label }}">password</label>
+                    {{ form.password }}
+                </div>
                 {% if redirect_field_value %}
-                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
                 {% endif %}
                 <button type="submit" class="btn btn-primary">{% trans "Log in" %}</button>
-                <a href="{% url "account_password_reset" %}" class="btn btn-link">{% trans "Forgot your password?" %}</a>
+                <a href="{% url "account_password_reset" %}"
+                   class="btn btn-link">{% trans "Forgot your password?" %}</a>
             </form>
             {% if ACCOUNT_OPEN_SIGNUP %}
                 <p class="login-signup">
                     <small>
-                        {% trans "Don't have an account?" %}  <strong><a href="{% urlnext 'account_signup' %}">{% trans "Sign up" %}</a></strong>
+                        {% trans "Don't have an account?" %} <strong><a
+                            href="{% urlnext 'account_signup' %}">{% trans "Sign up" %}</a></strong>
                     </small>
                 </p>
             {% endif %}
@@ -36,7 +48,7 @@
 {% block scripts %}
     {{ block.super }}
     <script type="text/javascript">
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('#id_username').focus();
         });
     </script>
