--- a/templates/skill_platform/add_skill.html
+++ b/templates/skill_platform/add_skill.html
@@ -1,31 +1,35 @@
 {% extends '../site_base.html' %}
 
 {% block body %}
-    <form method="POST" action="">
+    <form method="POST">
         {% csrf_token %}
-        {{ formset.management_form }}
-        <div id="form_set">
-            {% for form in formset.forms %}
-                <table class='no_error'>
-                    {{ form.as_table }}
-                </table>
+        {{ skills_formset.management_form }}
+        {% for skill_form in skills_formset %}
+            <div class="skills-formset">
+                {{ skill_form.as_table }}
+            </div>
+            <br>
+        {% endfor %}
+
+        {% if skill_formset.non_form_errors %}
+            {% for error in skill_formset.non_form_errors %}
+                {{ error|escape }}
             {% endfor %}
-        </div>
-        <input type="button" value="Add More" id="add_more">
-        <input type="submit" value="submit">
+        {% endif %}
+        <input type="submit" value="submit" class="button">
     </form>
-    <div id="empty_form" style="display:none">
-        <table class='no_error'>
-            {{ formset.empty_form.as_table }}
-        </table>
-    </div>
 
+
+    <!-- Include formset plugin - including jQuery dependency -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.formset/1.2.2/jquery.formset.js"></script>
     <script>
-
-        $('#add_more').click(function () {
-            var form_idx = $('#id_form-TOTAL_FORMS').val();
-            $('#form_set').append($('#empty_form').html().replace(/__prefix__/g, form_idx));
-            $('#id_form-TOTAL_FORMS').val(parseInt(form_idx) + 1);
+        $('.skills-formset').formset({
+            addText: 'add skill',
+            deleteText: 'remove'
         });
     </script>
 {% endblock %}
+
+
+
