--- a/templates/skill_platform/skill_list.html
+++ b/templates/skill_platform/skill_list.html
@@ -7,7 +7,7 @@
         <ul>
             {% for skill in skill_list %}
                 <li>
-                    <a href="/users/{{ skill.user.kepler_id }}">{{ skill.user }}</a>
+                    <a href="/user/{{ skill.user.kepler_id }}">{{ skill.user }}</a>
                     <b>{{ skill.name }}</b>
                     <b>{{ skill.description }}</b>
                 </li>
