--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -14,6 +14,7 @@ body {
 .title {
   font-size: 48px;
   text-align: center;
+  margin-top: 100px;
 }
 
 .byline {
@@ -21,7 +22,7 @@ body {
 }
 
 form {
-marg  in-top: 24px;
+  margin-top: 75px;
 }
 
 form label {
@@ -43,6 +44,10 @@ form input{
   border-color:	#FFF;
   border-radius: 10px;
   height: 30px;
+}
+
+.row {
+  margin-top: 15px;
 }
 
 .skills {
