--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -68,12 +68,8 @@ form input:focus, textarea:focus {
   text-transform: uppercase;
   color: #FFF;
   width: 240px;
-  border-style: solid;
-  border-width: 2px;
-  border-color:	transparent;
-  border-radius: 10px;
+  border: none;
   margin: 48px 0 0 240px;
-  border-style: none;
   height: 60px;
   background: linear-gradient(to bottom right, purple, blue);
 }
