disable resize of textarea

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -46,6 +46,7 @@ form input, textarea {
   border-color:	transparent;
   border-radius: 10px;
   height: 30px;
+  resize: none;
 }
 
 form input:focus, textarea:focus {
