--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -120,8 +120,19 @@ form input:focus, textarea:focus, button:focus {
   color: rgba(109,144,181,1);
 }
 
-.results {
-  height: 500px;
+.results-container {
   border: 2px solid rgba(172,118,181,1);
   border-radius: 20px;
+}
+
+ul.results {
+  list-style-type: none;
+  padding: 0;
+}
+
+.result-item {
+  font-size: 18px;
+  display: grid;
+  grid-template-columns: 38% auto; /* golden ratio */
+  margin: 35px 25px;
 }
