--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -136,3 +136,21 @@ ul.results {
   grid-template-columns: 38% auto; /* golden ratio */
   margin: 35px 25px;
 }
+
+.user-container {
+  margin-top: 100px;
+  border: 2px solid purple;
+}
+
+.avatar {
+  width: 75px;
+  height: 75px;
+  border: 3px solid red;
+  border-radius: 50%;
+  display: inline-grid;
+}
+
+.user-details {
+  display: inline-block;
+  font-size: 16px;
+}
