--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -23,11 +23,11 @@ body {
   text-align: center;
 }
 
-form {
+form.registration {
   margin-top: 75px;
 }
 
-form label {
+form.registration label {
   width: 180px;
   display: inline-block;
   margin-left: 110px;
@@ -104,6 +104,7 @@ form input:focus, textarea:focus, button:focus {
 }
 
 .right-col {
+  border: 2px solid blue;
 }
 
 .search {
@@ -141,7 +142,7 @@ ul.results {
   color: rgba(127,177,182,1);
 }
 
-.user-container {
+.user-container, .other-user-container {
   margin-top: 100px;
 }
 
@@ -155,4 +156,27 @@ ul.results {
 .user-details {
   display: inline-block;
   font-size: 16px;
+}
+
+.other-user-container {
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.other-user-avatar {
+  width: 115px;
+  height: 115px;
+  border-radius: 50%;
+  display: inline-grid;
+}
+
+form.token-send {
+  text-align: center;
+  margin: 75px;
+}
+
+form.token-send input {
+  width: 300px;
+  margin: 45px auto;
 }
