--- a/templates/skill_platform/skill_list.html
+++ b/templates/skill_platform/skill_list.html
@@ -1,21 +1,47 @@
 {% extends '../site_base.html' %}
 
 {% block body %}
-    <h1>Skill List</h1>
+    <div class="grid-container">
+        <div class="left-col">
+            <div class="user-container">
+                <img class="avatar" src="{{ user.userprofile.avatar.url }}"></img>
+                <div class="user-details">
+                    <div class="user-name">
+                        {{ user.first_name }} {{ user.last_name }} ({{ user.kepler_id }})
+                    </div>
+                    <div class="user-email">
+                        {{ user.email }}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="right-col">
+            <div class="title">Explore active services</div>
+{#            <div class="search">#}
+{#                <i class="fas fa-search"></i>#}
+{#            </div>#}
 
-    {% if skill_list %}
-        <ul>
-            {% for skill in skill_list %}
-                <li>
-                    <a href="/user/{{ skill.user.kepler_id }}">{{ skill.user }}</a>
-                    <b>{{ skill.name }}</b>
-                    <b>{{ skill.description }}</b>
-                </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <p>No User skills atm</p>
-    {% endif %}
+            {% if skill_list %}
+                <div class="results-container">
+                    <ul class="results">
+                        {% for skill in skill_list %}
+                            <li class="result-item">
+                                <div>
+                                    <span class="name"><a
+                                            href="/user/{{ skill.user.kepler_id }}">{{ skill.user.first_name }}</a></span> |
+                                    <span class="kepler-id">{{ skill.user.kepler_id }}</span>
+                                </div>
+                                <div class="personal-skills">
+                                    <b>{{ skill.name }}</b>, <b>{{ skill.description }}</b>
+                                </div>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                    <i class="fas fa-ellipsis-v"></i>
+                </div>
+            {% endif %}
+        </div>
+    </div>
 {% endblock %}
 
 
