--- a/templates/skill_platform/profile.html
+++ b/templates/skill_platform/profile.html
@@ -32,7 +32,7 @@
         <div class="right-col">
 
 
-            <div>
+            <div class="other-user-container">
                 <p> left intentionally empty for now </p>
             </div>
             {#            {% if not me %}#}
