fix tiny bugs and colors

--- a/templates/skill_platform/other_profile.html
+++ b/templates/skill_platform/other_profile.html
@@ -40,7 +40,8 @@
                             {% for skill in to_user.skills.all %}
                                 <li class="result-item">
                                     <div class="personal-skills">
-                                        <span><b>{{ skill.name }}: {{ skill.description }}</b></span>
+                                        <span><b
+                                                style="color: gold">{{ skill.name }}:</b> <b> {{ skill.description }}</b></span>
                                     </div>
                                 </li>
                             {% endfor %}
