--- a/templates/skill_platform/skill_list.html
+++ b/templates/skill_platform/skill_list.html
@@ -32,7 +32,7 @@
                                     <span class="kepler-id">{{ skill.user.kepler_id }}</span>
                                 </div>
                                 <div class="personal-skills">
-                                    <b>{{ skill.name }}</b>, <b>{{ skill.description }}</b>
+                                    <b style="color: gold">{{ skill.name }}</b>, <b>{{ skill.description }}</b>
                                 </div>
                             </li>
                         {% endfor %}
